[package]
name = "udp-multicast-expr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
machine-uid = "0.3.0"
serde = { features = ["derive"], version = "1.0.164" }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
